--- a/.gitattributes
+++ b/.gitattributes
@@ -1,7 +1,7 @@
 * text=auto !eol
-/CHANGES.txt -text
-/LICENSE.txt -text
-/README.txt -text
+/ChangeLog -text
+/LICENCE -text
+/README -text
 apertiumqa/__init__.py -text
 apertiumqa/average_ambiguity.py -text
 apertiumqa/core.py -text
