Renamed apertiumqa to apertium-quality, created autogen.sh

--- a/.gitattributes
+++ b/.gitattributes
@@ -2,14 +2,15 @@
 /ChangeLog -text
 /LICENCE -text
 /README -text
-apertiumqa/__init__.py -text
-apertiumqa/average_ambiguity.py -text
-apertiumqa/core.py -text
-apertiumqa/corpus_extractor.py -text
-apertiumqa/corpus_testing.py -text
-apertiumqa/coverage_testing.py -text
-apertiumqa/regression_testing.py -text
-apertiumqa/test/__init__.py -text
+apertium-quality/__init__.py -text
+apertium-quality/average_ambiguity.py -text
+apertium-quality/core.py -text
+apertium-quality/corpus_extractor.py -text
+apertium-quality/corpus_testing.py -text
+apertium-quality/coverage_testing.py -text
+apertium-quality/regression_testing.py -text
+apertium-quality/test/__init__.py -text
+/autogen.sh -text
 bin/regtest.py -text
 /distribute_setup.py -text
 /setup.py -text
