regtest.py works now :)

--- a/.gitattributes
+++ b/.gitattributes
@@ -2,15 +2,16 @@
 /ChangeLog -text
 /LICENCE -text
 /README -text
-apertium-quality/__init__.py -text
-apertium-quality/average_ambiguity.py -text
-apertium-quality/core.py -text
-apertium-quality/corpus_extractor.py -text
-apertium-quality/corpus_testing.py -text
-apertium-quality/coverage_testing.py -text
-apertium-quality/regression_testing.py -text
-apertium-quality/test/__init__.py -text
+apertium_quality/__init__.py -text
+apertium_quality/average_ambiguity.py -text
+apertium_quality/core.py -text
+apertium_quality/corpus_extractor.py -text
+apertium_quality/corpus_testing.py -text
+apertium_quality/coverage_testing.py -text
+apertium_quality/regression_testing.py -text
+apertium_quality/test/__init__.py -text
 /autogen.sh -text
 bin/regtest.py -text
 /distribute_setup.py -text
+doc/schema-draft.xml -text
 /setup.py -text
