--- a/.gitattributes
+++ b/.gitattributes
@@ -8,10 +8,15 @@ apertium_quality/core.py -text
 apertium_quality/corpus_extractor.py -text
 apertium_quality/corpus_testing.py -text
 apertium_quality/coverage_testing.py -text
+apertium_quality/frontend/__init__.py -text
+apertium_quality/frontend/coverage_tester.py -text
+apertium_quality/frontend/regression_tester.py -text
 apertium_quality/regression_testing.py -text
 apertium_quality/test/__init__.py -text
 /autogen.sh -text
-bin/regtest.py -text
+bin/aq-covtest -text
+bin/aq-regtest -text
 /distribute_setup.py -text
-doc/schema-draft.xml -text
+doc/dict-example.dix -text
+doc/statistics.rnc -text
 /setup.py -text
