--- a/.gitattributes
+++ b/.gitattributes
@@ -11,13 +11,16 @@ apertium_quality/coverage_testing.py -text
 apertium_quality/frontend/__init__.py -text
 apertium_quality/frontend/coverage_tester.py -text
 apertium_quality/frontend/regression_tester.py -text
+apertium_quality/frontend/website_generator.py -text
 apertium_quality/regression_testing.py -text
 apertium_quality/test/__init__.py -text
 /autogen.sh -text
 bin/aq-covtest -text
+bin/aq-htmlgen -text
 bin/aq-regtest -text
 /distribute_setup.py -text
 doc/dict-example.dix -text
+doc/example.xml -text
 doc/statistics.rnc -text
 doc/statistics.rng -text
 /setup.py -text
