Serious update for serious people. Added aq-hfsttest.

--- a/.gitattributes
+++ b/.gitattributes
@@ -3,19 +3,16 @@
 /LICENCE -text
 /README -text
 apertium_quality/__init__.py -text
-apertium_quality/average_ambiguity.py -text
-apertium_quality/core.py -text
-apertium_quality/corpus_extractor.py -text
-apertium_quality/corpus_testing.py -text
-apertium_quality/coverage_testing.py -text
+apertium_quality/corpora.py -text
 apertium_quality/frontend/__init__.py -text
 apertium_quality/frontend/coverage_tester.py -text
+apertium_quality/frontend/hfst_tester.py -text
 apertium_quality/frontend/regression_tester.py -text
 apertium_quality/frontend/website_generator.py -text
-apertium_quality/regression_testing.py -text
-apertium_quality/test/__init__.py -text
+apertium_quality/testing.py -text
 /autogen.sh -text
 bin/aq-covtest -text
+bin/aq-hfsttest -text
 bin/aq-htmlgen -text
 bin/aq-regtest -text
 /distribute_setup.py -text
