aq-hfsttest should work now :)

--- a/.gitattributes
+++ b/.gitattributes
@@ -2,15 +2,17 @@
 /ChangeLog -text
 /LICENCE -text
 /README -text
-apertium_quality/__init__.py -text
-apertium_quality/corpora.py -text
-apertium_quality/frontend/__init__.py -text
-apertium_quality/frontend/ambiguity_tester.py -text
-apertium_quality/frontend/coverage_tester.py -text
-apertium_quality/frontend/hfst_tester.py -text
-apertium_quality/frontend/regression_tester.py -text
-apertium_quality/frontend/website_generator.py -text
-apertium_quality/testing.py -text
+apertium/__init__.py -text
+apertium/quality/__init__.py -text
+apertium/quality/corpora.py -text
+apertium/quality/frontend/__init__.py -text
+apertium/quality/frontend/ambiguity_tester.py -text
+apertium/quality/frontend/auto_testing.py -text
+apertium/quality/frontend/coverage_tester.py -text
+apertium/quality/frontend/hfst_tester.py -text
+apertium/quality/frontend/regression_tester.py -text
+apertium/quality/frontend/website_generator.py -text
+apertium/quality/testing.py -text
 /autogen.sh -text
 bin/aq-ambtest -text
 bin/aq-covtest -text
