--- a/.gitattributes
+++ b/.gitattributes
@@ -7,9 +7,13 @@ apertium/quality/__init__.py -text
 apertium/quality/corpora.py -text
 apertium/quality/frontend/__init__.py -text
 apertium/quality/frontend/ambiguity_tester.py -text
+apertium/quality/frontend/auto_tester.py -text
 apertium/quality/frontend/auto_testing.py -text
+apertium/quality/frontend/corpus_extractor.py -text
 apertium/quality/frontend/coverage_tester.py -text
+apertium/quality/frontend/generation_tester.py -text
 apertium/quality/frontend/hfst_tester.py -text
+apertium/quality/frontend/morph_tester.py -text
 apertium/quality/frontend/regression_tester.py -text
 apertium/quality/frontend/website_generator.py -text
 apertium/quality/testing.py -text
