--- a/.gitattributes
+++ b/.gitattributes
@@ -9,26 +9,17 @@ apertium/quality/corpora.py -text
 apertium/quality/frontend/__init__.py -text
 apertium/quality/frontend/ambiguity_tester.py -text
 apertium/quality/frontend/auto_tester.py -text
-apertium/quality/frontend/auto_testing.py -text
 apertium/quality/frontend/corpus_extractor.py -text
 apertium/quality/frontend/coverage_tester.py -text
 apertium/quality/frontend/dictionary_tester.py -text
 apertium/quality/frontend/generation_tester.py -text
-apertium/quality/frontend/hfst_tester.py -text
 apertium/quality/frontend/morph_tester.py -text
 apertium/quality/frontend/regression_tester.py -text
 apertium/quality/frontend/vocabulary_tester.py -text
 apertium/quality/frontend/website_generator.py -text
+apertium/quality/html.py -text
+apertium/quality/test/__init__.py -text
 apertium/quality/testing.py -text
 /autogen.sh -text
-bin/aq-ambtest -text
-bin/aq-covtest -text
-bin/aq-hfsttest -text
-bin/aq-htmlgen -text
-bin/aq-regtest -text
 /distribute_setup.py -text
-doc/dict-example.dix -text
-doc/example.xml -text
-doc/statistics.rnc -text
-doc/statistics.rng -text
 /setup.py -text
